--- a/PROJECT/LAB1/LAB1.ioc
+++ b/PROJECT/LAB1/LAB1.ioc
@@ -8,9 +8,37 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=VP_SYS_VS_ND
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.PinsNb=2
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin10=PB11
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
+Mcu.Pin2=PA4
+Mcu.Pin20=PA14
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_SYS_VS_ND
+Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin3=PA5
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB2
+Mcu.Pin9=PB10
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -27,6 +55,118 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=SEG_2
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=SEG_3
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=SEG_4
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=SEG_5
+PA13.Locked=true
+PA13.Signal=GPIO_Output
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=SEG_6
+PA14.Locked=true
+PA14.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=L1
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=L2
+PA3.Locked=true
+PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=L3
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LED_RED
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=LED_YELLOW
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=LED_GREEN
+PA7.Locked=true
+PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=SEG_0
+PA8.Locked=true
+PA8.Signal=GPIO_Output
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=SEG_1
+PA9.Locked=true
+PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LED_1
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=LED_2
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=LED_11
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=LED_12
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=L4
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=L5
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=L6
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=LED_3
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=LED_4
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=LED_5
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=LED_6
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=LED_7
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=LED_8
+PB7.Locked=true
+PB7.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=LED_9
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=LED_10
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
